✨ デザインを少しマシにした

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         padding: 0;
         background: black;
         color: white;
-        overflow: hidden;
       }
       body {
         width: 50%;
@@ -33,6 +32,16 @@
         margin: 0 5px;
         padding: 0;
       }
+      .product {
+        width: 90%;
+        margin: 5px;
+        padding: 20px;
+        background: rgb(48, 48, 48);
+        border-radius: 15px;
+      }
+      a{color: aquamarine;}
+      a:hover{color: azure;}
+      a:visited{color: rgb(0, 132, 255);}
     </style>
     <title>show0317sw | portfolio</title>
   </head>
@@ -54,51 +63,58 @@
     </div>
     <hr />
     <div><h3>SNSとか</h3></div>
-    <a href="https://github.com/show0317sw">GitHub</a>
-    <a href="https://twitter.com/show0317sw">Twitter</a>
+    <a target="_blank" href="https://github.com/show0317sw">GitHub</a>
+    <a target="_blank" href="https://twitter.com/show0317sw">Twitter</a>
     <hr />
     <div>
       <h3>product</h3>
-      <div>
+      <div class="product">
         <h4>ポートフォリオサイト</h4>
         <p>このページ</p>
-        <a href="https://github.com/show0317sw/portfolio">GitHub</a>
+        <a target="_blank" href="https://github.com/show0317sw/portfolio">GitHub</a>
       </div>
-      <div>
+      <div class="product">
         <h4>botちゃん</h4>
         <p>
           LINEを利用してGoogleシートに生活を記録するプログラムのSlack版として始めたがいろいろ違う
         </p>
-        <a href="https://github.com/show0317sw/bot-chan">GitHub</a>
+        <a target="_blank" href="https://github.com/show0317sw/bot-chan">GitHub</a>
       </div>
-      <div>
+      <div class="product">
         <h4>rayster</h4>
         <p>メディアプレイヤーのElectron版</p>
-        <a href="https://github.com/show0317sw/rayster">GitHub</a>
+        <a target="_blank" href="https://github.com/show0317sw/rayster">GitHub</a>
       </div>
-      <div>
+      <div class="product">
         <h4>webの勉強用サイト</h4>
-        <a href="https://first.show0317sw.com/"
+        <p>もう更新してなかったりする</p>
+        <a target="_blank" href="https://first.show0317sw.com/"
           >https://first.show0317sw.com/</a
         >
-        <a href="https://github.com/show0317sw/first-show0317sw.com">GitHub</a>
+        <a  target="_blank" href="https://github.com/show0317sw/first-show0317sw.com">GitHub</a>
       </div>
-      <div>
+      <div class="product">
         <h4>メディアプレイヤー</h4>
-        <a href="https://show0317sw.github.io/MediaPlayer/index.html"
+        <a  target="_blank" href="https://show0317sw.github.io/MediaPlayer/index.html"
           >https://show0317sw.github.io/MediaPlayer/index.html</a
         >
-        <a href="https://github.com/show0317sw/MediaPlayer">GitHub</a>
+        <a  target="_blank" href="https://github.com/show0317sw/MediaPlayer">GitHub</a>
       </div>
-      <div>
+      <div class="product">
         <h4>osu!のスキンセットリスト日本語版</h4>
         <a
           href="https://show0317sw.github.io/osu-SkinSetList-ja/SkinSetList-ja.html"
           >https://show0317sw.github.io/osu-SkinSetList-ja/SkinSetList-ja.html</a
         >
-        <a href="https://github.com/show0317sw/osu-SkinSetList-ja">GitHub</a>
+        <a  target="_blank" href="https://github.com/show0317sw/osu-SkinSetList-ja">GitHub</a>
       </div>
-      <div><h4>LINEを利用してGoogleシートに生活を記録するプログラム</h4></div>
+      <div class="product">
+        <h4>LINEを利用してGoogleシートに生活を記録するプログラム</h4>
+        <p>GAS利用なのでそのうちGitHubにコード上げるかもしれない</p>
+      </div>
+    </div>
+    <div>
+      <p>&copy; 2018 Shota Yoshikawa</p>
     </div>
     <script>
       "use strict";
