✨ スキルと興味を追加

--- a/index.html
+++ b/index.html
@@ -60,25 +60,45 @@
     <title>show0317sw | portfolio</title>
   </head>
   <body>
-    <div class="flex" style="margin:10px">
-      <img
-        src="./img/show0317sw3.png"
-        alt="show0317sw"
-        height="70px"
-        width="70px"
-      />
-      <div>
-        <h1>吉川 祥大</h1>
-        <div class="flex">
-          <p>2000-12-27生</p>
-          <p id="age"></p>
+    <div>
+      <div class="flex" style="margin:10px">
+        <img
+          src="./img/show0317sw3.png"
+          alt="show0317sw"
+          height="100px"
+          width="100px"
+        />
+        <div>
+          <h1>吉川 祥大</h1>
+          <p>show0317sw</p>
+          <div class="flex">
+            <p>2000-12-27生</p>
+            <p id="age"></p>
+          </div>
         </div>
       </div>
+      <p>N高等学校 3年</p>
+      <p></p>
     </div>
     <hr />
-    <div><h3>SNSとか</h3></div>
-    <a target="_blank" href="https://github.com/show0317sw">GitHub</a>
-    <a target="_blank" href="https://twitter.com/show0317sw">Twitter</a>
+    <div>
+      <h3>SNSとか</h3>
+      <a target="_blank" href="https://github.com/show0317sw">GitHub</a>
+      <a target="_blank" href="https://twitter.com/show0317sw">Twitter</a>
+      <a target="_blank" href="https://www.facebook.com/show0317sw">facebook</a>
+    </div>
+    <hr />
+    <div>
+      <h3>スキル</h3>
+      <p>HTML/CSS/JavaScript</p>
+      <p>Node.js</p>
+      <p>C++</p>
+      <p>自作PC</p>
+      <h3>興味</h3>
+      <p>機械学習</p>
+      <p>人間</p>
+      <p>ロボット</p>
+    </div>
     <hr />
     <div>
       <h3>product</h3>
@@ -98,18 +118,12 @@
       </div>
       <div class="product">
         <h4>botちゃんの後継サービス(名前決めたい)</h4>
-        <p>
-          botちゃんのSlack版として始めたがいろいろ違う
-        </p>
+        <p>botちゃんのSlack版として始めたがいろいろ違う</p>
         <a target="_blank" href="https://github.com/show0317sw/bot-chan"
           >GitHub</a
         >
         <div class="flex">
-          <img
-            class="img"
-            src="./img/koudou_kiroku.png"
-            alt="koudou_kiroku"
-          />
+          <img class="img" src="./img/koudou_kiroku.png" alt="koudou_kiroku" />
         </div>
       </div>
       <div class="product">
