--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@
         </div>
       </div>
     </div>
+    <hr>
+    <div>
+      <h3>History</h3>
+      <p>2016-4-1 栃木県立宇都宮工業高等学校 機械科 入学</p>
+      <p>2016-8 WROJapan北関東予選 ｢supernova｣ 準優勝</p>
+      <p>2018-12-1 ~ N高等学校 ネットコース</p>
+    </div>
+    <hr>
     <div><p>&copy; 2018 Shota Yoshikawa</p></div>
     <script>
       "use strict";
