✨ メアド追加

--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
       <p>2018-12-1 ~ N高等学校 ネットコース</p>
     </div>
     <hr>
+    <div>
+      <h3>contact</h3>
+      <a href="mailto:shota.yoshikawa0202@gmail.com">shota.yoshikawa0202@gmail.com</a>
+    </div>
+    <hr>
     <div><p>&copy; 2018 Shota Yoshikawa</p></div>
     <script>
       "use strict";
