✨ 開発中タグ追加

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         object-fit: contain;
         background: rgb(48, 48, 48);
       }
+      .dev {
+        color: red;
+      }
     </style>
     <title>show0317sw | portfolio</title>
   </head>
@@ -117,9 +120,13 @@
         </div>
       </div>
       <div class="product">
+        <p class="dev">開発中</p>
         <h4>botちゃんの後継サービス(名前決めたい)</h4>
         <p>botちゃんのSlack版として始めたがいろいろ違う</p>
         <a target="_blank" href="https://github.com/show0317sw/bot-chan"
+          >GitHub</a
+        >
+        <a target="_blank" href="https://github.com/show0317sw/life-style-recording-system"
           >GitHub</a
         >
         <div class="flex">
@@ -127,6 +134,7 @@
         </div>
       </div>
       <div class="product">
+        <p class="dev">開発中</p>
         <h4>rayster</h4>
         <p>メディアプレイヤーのElectron版</p>
         <a target="_blank" href="https://github.com/show0317sw/rayster"
@@ -209,19 +217,21 @@
         </div>
       </div>
     </div>
-    <hr>
+    <hr />
     <div>
       <h3>History</h3>
       <p>2016-4-1 栃木県立宇都宮工業高等学校 機械科 入学</p>
       <p>2016-8 WROJapan北関東予選 ｢supernova｣ 準優勝</p>
-      <p>2018-12-1 ~ N高等学校 ネットコース</p>
+      <p>2018-12-1 ~ N高等学校</p>
     </div>
-    <hr>
+    <hr />
     <div>
       <h3>contact</h3>
-      <a href="mailto:shota.yoshikawa0202@gmail.com">shota.yoshikawa0202@gmail.com</a>
+      <a href="mailto:shota.yoshikawa0202@gmail.com"
+        >shota.yoshikawa0202@gmail.com</a
+      >
     </div>
-    <hr>
+    <hr />
     <div><p>&copy; 2018 Shota Yoshikawa</p></div>
     <script>
       "use strict";
