--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
+    <meta property="og:title" content="Shota Yoshikawa | portfolio" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="吉川祥大のポートフォリオ" />
+    <meta property="og:url" content="https://portfolio.show0317sw.com/" />
+    <meta property="og:site_name" content="portfolio" />
+    <meta property="og:image" content="./img/portfolio_site.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <title>Shota Yoshikawa | portfolio</title>
     <style>
       html {
         width: 100%;
@@ -60,7 +67,6 @@
         color: red;
       }
     </style>
-    <title>show0317sw | portfolio</title>
   </head>
   <body>
     <div>
