--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:description" content="吉川祥大のポートフォリオ" />
     <meta property="og:url" content="https://portfolio.show0317sw.com/" />
     <meta property="og:site_name" content="portfolio" />
-    <meta property="og:image" content="./img/portfolio_site.png" />
+    <meta property="og:image" content="https://portfolio.show0317sw.com/img/portfolio_site.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
