--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
   <head>
     <meta property="og:title" content="Shota Yoshikawa | portfolio" />
     <meta property="og:type" content="article" />
