--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
     </div>
     <hr />
     <div>
-      <h3>SNSとか</h3>
+      <h3>SNS</h3>
       <a target="_blank" href="https://github.com/show0317sw">GitHub</a>
       <a target="_blank" href="https://twitter.com/show0317sw">Twitter</a>
       <a target="_blank" href="https://www.facebook.com/show0317sw">facebook</a>
     </div>
     <hr />
     <div>
-      <h3>スキル</h3>
+      <h3>skill</h3>
       <p>HTML/CSS/JavaScript</p>
       <p>Node.js</p>
       <p>C++</p>
