--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
       <h3>History</h3>
       <p>2016-4-1 栃木県立宇都宮工業高等学校 機械科 入学</p>
       <p>2016-8 WROJapan北関東予選 ｢supernova｣ 準優勝</p>
-      <p>2018-12-1 ~ N高等学校</p>
+      <p>2017-12-1 N高等学校</p>
+      <p>2018-11-23 東京Node学園祭2018一般参加</p>
     </div>
     <hr />
     <div>
