--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <p>Node.js</p>
       <p>C++</p>
       <p>自作PC</p>
-      <h3>興味</h3>
+      <h3>Interest</h3>
       <p>機械学習</p>
       <p>人間</p>
       <p>ロボット</p>
