✨ デザイン修正

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta property="og:description" content="吉川祥大のポートフォリオ" />
     <meta property="og:url" content="https://portfolio.show0317sw.com/" />
     <meta property="og:site_name" content="portfolio" />
-    <meta property="og:image" content="https://portfolio.show0317sw.com/img/portfolio_site.png" />
+    <meta
+      property="og:image"
+      content="https://portfolio.show0317sw.com/img/portfolio_site.png"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -43,6 +46,7 @@
         width: 90%;
         margin: 5px;
         padding: 20px;
+        margin: 10px auto;
         background: rgb(48, 48, 48);
         border-radius: 15px;
       }
@@ -132,7 +136,9 @@
         <a target="_blank" href="https://github.com/show0317sw/bot-chan"
           >GitHub</a
         >
-        <a target="_blank" href="https://github.com/show0317sw/life-style-recording-system"
+        <a
+          target="_blank"
+          href="https://github.com/show0317sw/life-style-recording-system"
           >GitHub</a
         >
         <div class="flex">
