--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Shota Yoshikawa | portfolio</title>
     <style>
+      @media screen and (max-width: 479px) {
+      }
       html {
         width: 100%;
         height: 100%;
@@ -49,9 +51,11 @@
         margin: 10px auto;
         background: rgb(48, 48, 48);
         border-radius: 15px;
+        overflow: hidden;
       }
       a {
         color: aquamarine;
+        word-wrap: break-word;
       }
       a:hover {
         color: azure;
@@ -70,6 +74,15 @@
       .dev {
         color: red;
       }
+      iframe {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+      }
+      h4 {
+        margin: 0;
+        padding: 0 5px;
+      }
     </style>
   </head>
   <body>
@@ -78,16 +91,12 @@
         <img
           src="./img/show0317sw3.png"
           alt="show0317sw"
-          height="100px"
-          width="100px"
+          height="70px"
+          width="70px"
         />
         <div>
           <h1>吉川 祥大</h1>
           <p>show0317sw</p>
-          <div class="flex">
-            <p>2000-12-27生</p>
-            <p id="age"></p>
-          </div>
         </div>
       </div>
       <p></p>
@@ -101,37 +110,31 @@
     </div>
     <hr />
     <div>
-      <h3>skill</h3>
-      <p>HTML/CSS/JavaScript</p>
-      <p>Node.js</p>
-      <p>C++</p>
-      <p>自作PC</p>
+      <h3>Skill</h3>
+      <ul>
+        <li>HTML/CSS/JavaScript</li>
+        <li>Node.js</li>
+        <li>C++</li>
+        <li>自作PC</li>
+      </ul>
       <h3>Interest</h3>
-      <p>機械学習</p>
-      <p>人間</p>
-      <p>ロボット</p>
+      <ul>
+        <li>機械学習</li>
+        <li>人間</li>
+        <li>ロボット</li>
+      </ul>
     </div>
     <hr />
     <div>
-      <h3>product</h3>
+      <h3>Product</h3>
       <div class="product">
-        <h4>ポートフォリオサイト</h4>
-        <p>このページ</p>
-        <a target="_blank" href="https://github.com/show0317sw/portfolio"
-          >GitHub</a
-        >
         <div class="flex">
-          <img
-            class="img"
-            src="./img/portfolio_site.png"
-            alt="portfolio_site"
-          />
+          <h4 class="dev">開発中</h4>
+          <h4>botちゃんの後継サービス(名前決めたい)</h4>
         </div>
-      </div>
-      <div class="product">
-        <p class="dev">開発中</p>
-        <h4>botちゃんの後継サービス(名前決めたい)</h4>
-        <p>botちゃんのSlack版として始めたがいろいろ違う</p>
+        <div>
+          <img class="img" src="./img/koudou_kiroku.png" alt="koudou_kiroku" />
+        </div>
         <a target="_blank" href="https://github.com/show0317sw/bot-chan"
           >GitHub</a
         >
@@ -140,18 +143,21 @@
           href="https://github.com/show0317sw/life-style-recording-system"
           >GitHub</a
         >
-        <div class="flex">
-          <img class="img" src="./img/koudou_kiroku.png" alt="koudou_kiroku" />
-        </div>
+        <p>
+          下記botちゃんの後継として作り始めた行動のログを取る機能はほぼ同じだが､ログを利用してユーザーに有用な情報を提供できるようにしたい｡
+        </p>
+        <p>
+          使用技術: HTML(pug) / CSS(bootstrap) / JavaScript / Node.js /
+          express.js / PostgreSQL / Slack API
+        </p>
+        <h5></h5>
       </div>
       <div class="product">
-        <p class="dev">開発中</p>
-        <h4>rayster</h4>
-        <p>メディアプレイヤーのElectron版</p>
-        <a target="_blank" href="https://github.com/show0317sw/rayster"
-          >GitHub</a
-        >
         <div class="flex">
+          <h4 class="dev">開発中</h4>
+          <h4>rayster</h4>
+        </div>
+        <div>
           <iframe
             width="560"
             height="315"
@@ -161,28 +167,21 @@
             allowfullscreen
           ></iframe>
         </div>
-      </div>
-      <div class="product">
-        <h4>webの勉強用サイト</h4>
-        <p>もう更新してなかったりする</p>
-        <a target="_blank" href="https://first.show0317sw.com/"
-          >https://first.show0317sw.com/</a
-        >
-        <a
-          target="_blank"
-          href="https://github.com/show0317sw/first-show0317sw.com"
+        <a target="_blank" href="https://github.com/show0317sw/rayster"
           >GitHub</a
         >
-        <div class="flex">
-          <img
-            class="img"
-            src="./img/show0317sw_all.png"
-            alt="show0317sw_all"
-          />
-        </div>
+        <p>
+          下記メディアプレイヤーのElectron版｡ブラウザでは不十分だった機能や動作の安定化の目的で比較的学習コストの低いElectronを用い開発することにした｡
+        </p>
+        <p>使用技術: HTNL / CSS / JavaScript / Electron</p>
       </div>
       <div class="product">
         <h4>メディアプレイヤー</h4>
+        <div class="flex">
+          <div>
+            <img class="img" src="./img/media_player.png" alt="media_player" />
+          </div>
+        </div>
         <a
           target="_blank"
           href="https://show0317sw.github.io/MediaPlayer/index.html"
@@ -191,12 +190,46 @@
         <a target="_blank" href="https://github.com/show0317sw/MediaPlayer"
           >GitHub</a
         >
+        <p>
+          動画再生に対応したメディアプレイヤー｡他の製品では満足できなかったので自分の理想のUIや機能を実装した｡DOMを理解する為にjQueryなどのライブラリは用いずブラウザAPIだけで開発した｡
+        </p>
+        <p>使用技術: HTML / CSS / JavaScript</p>
+      </div>
+      <div class="product">
+        <h4>Webの勉強用サイト</h4>
         <div class="flex">
-          <img class="img" src="./img/media_player.png" alt="media_player" />
+          <div>
+            <img
+              class="img"
+              src="./img/show0317sw_all.png"
+              alt="show0317sw_all"
+            />
+          </div>
         </div>
+        <a target="_blank" href="https://first.show0317sw.com/"
+          >https://first.show0317sw.com/</a
+        >
+        <a
+          target="_blank"
+          href="https://github.com/show0317sw/first-show0317sw.com"
+          >GitHub</a
+        >
+        <p>
+          好奇心でブログっぽいのをやってみたくなってしまったので作り始めた｡製作中ブラウザの仕様などの理解が不十分だったと感じ､上記のメディアプレイヤーの開発を決定｡
+        </p>
+        <p>使用技術: HTML / CSS / JavaScript</p>
       </div>
       <div class="product">
         <h4>osu!のスキンセットリスト日本語版</h4>
+        <div class="flex">
+          <div>
+            <img
+              class="img"
+              src="./img/osu_skin_setlist.png"
+              alt="osu_skin_setlist"
+            />
+          </div>
+        </div>
         <a
           href="https://show0317sw.github.io/osu-SkinSetList-ja/SkinSetList-ja.html"
           >https://show0317sw.github.io/osu-SkinSetList-ja/SkinSetList-ja.html</a
@@ -206,62 +239,53 @@
           href="https://github.com/show0317sw/osu-SkinSetList-ja"
           >GitHub</a
         >
-        <div class="flex">
-          <img
-            class="img"
-            src="./img/osu_skin_setlist.png"
-            alt="osu_skin_setlist"
-          />
-        </div>
+        <p>
+          HTMLとCSSの勉強の為にosu!というゲームのデザインが好きだったのでそれを参考に(ついでに和訳して)まとめたWebページ｡
+        </p>
+        <p>使用技術: HTML / CSS</p>
       </div>
       <div class="product">
         <h4>botちゃん</h4>
-        <p>LINEを利用してGoogleシートに生活を記録するプログラム</p>
-        <p>GAS利用なのでそのうちGitHubにコード上げるかもしれない</p>
         <div class="flex">
-          <img class="img" src="./img/line_bot_chan.png" alt="LINE_botちゃん" />
-          <img
-            class="img"
-            src="./img/bot_chan_sheets.png"
-            alt="botちゃん_シート"
-          />
+          <div>
+            <img
+              class="img"
+              src="./img/line_bot_chan.png"
+              alt="LINE_botちゃん"
+            />
+          </div>
+          <div>
+            <img
+              class="img"
+              src="./img/bot_chan_sheets.png"
+              alt="botちゃん_シート"
+            />
+          </div>
         </div>
+        <p>LINEを利用してGoogleシートに生活を記録するプログラム</p>
+        <p>
+          使用技術: Google App Script / Google Sheets API / Google Calendar API
+          / LINE API
+        </p>
       </div>
     </div>
     <hr />
     <div>
       <h3>History</h3>
-      <p>2016-4-1 栃木県立宇都宮工業高等学校 機械科 入学</p>
-      <p>2016-8 WROJapan北関東予選 ｢supernova｣ 準優勝</p>
-      <p>2017-12-1 N高等学校 転入学</p>
-      <p>2018-11-23 東京Node学園祭2018一般参加</p>
+      <ul>
+        <li>2016-4-1 栃木県立宇都宮工業高等学校 機械科 入学</li>
+        <li>2016-8 WROJapan北関東予選 ｢supernova｣ 準優勝</li>
+        <li>2017-12-1 N高等学校 転入学</li>
+      </ul>
     </div>
     <hr />
     <div>
-      <h3>contact</h3>
+      <h3>Contact</h3>
       <a href="mailto:shota.yoshikawa0202@gmail.com"
-        >shota.yoshikawa0202@gmail.com</a
-      >
+        ><img src="./img/email.png" alt="email"
+      /></a>
     </div>
     <hr />
     <div><p>&copy; 2018 Shota Yoshikawa</p></div>
-    <script>
-      "use strict";
-      const birth = new Date("2000-12-27");
-      updateAge();
-      setInterval(() => {
-        updateAge();
-      }, 1000);
-      function updateAge() {
-        let now = new Date();
-        let age = Math.floor((now - birth) / 1000 / 60 / 60 / 24 / 365);
-        if (
-          $("p#age")[0].outerText == age + "歳" ||
-          $("p#age")[0].outerText == ""
-        ) {
-          $("p#age").text(age + "歳");
-        }
-      }
-    </script>
   </body>
 </html>
