:+1: プロダクト名変更

--- a/index.html
+++ b/index.html
@@ -130,17 +130,12 @@
       <div class="product">
         <div class="flex">
           <h4 class="dev">開発中</h4>
-          <h4>botちゃんの後継サービス(名前決めたい)</h4>
+          <h4>fuwafuwa</h4>
         </div>
         <div>
           <img class="img" src="./img/koudou_kiroku.png" alt="koudou_kiroku" />
         </div>
-        <a target="_blank" href="https://github.com/show0317sw/bot-chan"
-          >GitHub</a
-        >
-        <a
-          target="_blank"
-          href="https://github.com/show0317sw/life-style-recording-system"
+        <a target="_blank" href="https://github.com/show0317sw/fuwafuwa"
           >GitHub</a
         >
         <p>
