:+1: 紹介文を修正

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
           >GitHub</a
         >
         <p>
-          U20やさしいかくめいラボというコミュニティから生まれたbot僕が作ったのはNode.js版だか､メンバーが各々の好きな言語で開発している｡運用は現状GCPで行っている｡
+          U20やさしいかくめいラボというコミュニティから生まれたbot｡単語の解析はMeCabを利用している｡僕が作ったのはNode.js版だか､メンバーが各々の好きな言語で開発している｡現在はGCPで運用している｡
         </p>
-        <p>使用技術: JavaScript / Node.js / Discord.js / PostgreSQL</p>
+        <p>使用技術: JavaScript / Node.js / Discord.js / PostgreSQL / MeCab</p>
       </div>
       <div class="product">
         <div class="flex">
