:bug: スマホで見たときにYouTube埋め込みが見切れる不具合を修正

--- a/index.html
+++ b/index.html
@@ -145,9 +145,15 @@
           <h4>U20 しりとりbot</h4>
         </div>
         <div class="flex">
-          <div class="mid">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/S4HJ_Tsk-Ac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+          <iframe
+            class="mid"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/S4HJ_Tsk-Ac"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
         <a
           target="_blank"
