--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
         <li>人間</li>
         <li>ロボット</li>
       </ul>
+      <h3>History</h3>
+      <ul>
+        <li>2016-4-1 栃木県立宇都宮工業高等学校 機械科 入学</li>
+        <li>2016-8 WROJapan北関東予選 ｢supernova｣ 準優勝</li>
+        <li>2017-12-1 N高等学校 転入学</li>
+      </ul>
+      <h3>Qualification</h3>
+      <ul>
+        <li>基本情報処理技術者</li>
+      </ul>
     </div>
     <hr />
     <div>
@@ -304,15 +314,6 @@
           / LINE API
         </p>
       </div>
-    </div>
-    <hr />
-    <div>
-      <h3>History</h3>
-      <ul>
-        <li>2016-4-1 栃木県立宇都宮工業高等学校 機械科 入学</li>
-        <li>2016-8 WROJapan北関東予選 ｢supernova｣ 準優勝</li>
-        <li>2017-12-1 N高等学校 転入学</li>
-      </ul>
     </div>
     <hr />
     <div>
