--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
           <h4>fuwapath</h4>
         </div>
         <div>
-          <img class="img" src="./img/koudou_kiroku.png" alt="koudou_kiroku" />
+          <img class="img" src="./img/fuwapath.png" alt="koudou_kiroku" />
         </div>
         <a target="_blank" href="https://github.com/show0317sw/fuwapath"
           >GitHub</a
         >
-        <a target="_blank" href="https://www.fuwapath.life"
-          >fuwapath(製作中｡今年中にサイトは作成します｡)</a
+        <a target="_blank" href="https://fuwapath.life"
+          >fuwapath</a
         >
         <p>
           下記botちゃんの後継として作り始めた行動のログを取る機能はほぼ同じだが､ログを利用してユーザーに有用な情報を提供できるようにしたい｡
