--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta property="og:title" content="Shota Yoshikawa | portfolio" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="吉川祥大のポートフォリオ" />
-    <meta property="og:url" content="https://portfolio.show0317sw.com/" />
+    <meta property="og:url" content="https://portfolio.anoriqq.com/" />
     <meta property="og:site_name" content="portfolio" />
     <meta
       property="og:image"
-      content="https://portfolio.show0317sw.com/img/portfolio_site.png"
+      content="https://anoriqq.github.io/portfolio/img/portfolio_site.png"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript">(function(){var t,e,n,r,a;for(t=function(){var t;return t=[],function(){var e,n,r,a;for(n=["init","start","stop","user","track","action","event","goal","chat","buy","page","view","admin","group","alias","ready","link","form","click","submit","cmd","emit","on","send","css","js","style","option","get","set","collection"],e=function(e){return function(){return t.push([e].concat(Array.prototype.slice.call(arguments,0)))}},r=0,a=[];r<n.length;)t[n[r]]=e(n[r]),a.push(r++);return a}(),t.init=function(e,n){var r,a;return t.api_key=e,t.options=n||{},a=document.createElement("script"),a.type="text/javascript",a.async=!0,a.charset="utf-8",a.src=t.options.tracker_url||"http://localhost:8020/node_modules/tracker.js/build/build.js",r=document.getElementsByTagName("script")[0],r.parentNode.insertBefore(a,r)},t},r=window.karte_tracker_names||["tracker"],e=0,n=r.length;n>e;e++)a=r[e],window[a]||(window[a]=t());tracker.init("3d2778f9f515ace1c8dd22969abe7e51", {track_url: 'http://portfolio.show0317sw.com', admin_url: 'http://localhost:8020'})}).call(this);</script>
+    <script type="text/javascript">(function(){var t,e,n,r,a;for(t=function(){var t;return t=[],function(){var e,n,r,a;for(n=["init","start","stop","user","track","action","event","goal","chat","buy","page","view","admin","group","alias","ready","link","form","click","submit","cmd","emit","on","send","css","js","style","option","get","set","collection"],e=function(e){return function(){return t.push([e].concat(Array.prototype.slice.call(arguments,0)))}},r=0,a=[];r<n.length;)t[n[r]]=e(n[r]),a.push(r++);return a}(),t.init=function(e,n){var r,a;return t.api_key=e,t.options=n||{},a=document.createElement("script"),a.type="text/javascript",a.async=!0,a.charset="utf-8",a.src=t.options.tracker_url||"http://localhost:8020/node_modules/tracker.js/build/build.js",r=document.getElementsByTagName("script")[0],r.parentNode.insertBefore(a,r)},t},r=window.karte_tracker_names||["tracker"],e=0,n=r.length;n>e;e++)a=r[e],window[a]||(window[a]=t());tracker.init("3d2778f9f515ace1c8dd22969abe7e51", {track_url: 'http://portfolio.anoriqq.com', admin_url: 'http://localhost:8020'})}).call(this);</script>
     <title>Shota Yoshikawa | portfolio</title>
     <style>
       @media screen and (max-width: 479px) {
@@ -36,6 +36,9 @@
       }
       .flex {
         display: flex;
+      }
+      .none {
+        display: none;
       }
       p {
         margin: 0 5px;
@@ -95,31 +98,31 @@
     <p class="change">
       このサイトの更新履歴は<a
         target="_blank"
-        href="https://github.com/show0317sw/portfolio"
+        href="https://github.com/anoriqq/portfolio"
         >GitHub</a
       >を御覧ください｡
     </p>
     <div>
       <div class="flex" style="margin:30px 10px">
         <img
-          src="./img/show0317sw3.png"
-          alt="show0317sw"
+          src="./img/anoriqq3.png"
+          alt="anoriqq"
           height="70px"
           width="70px"
         />
         <div>
           <h1>吉川 祥大</h1>
-          <p>show0317sw</p>
+          <p>anoriqq</p>
         </div>
       </div>
     </div>
     <hr />
     <div>
       <h3>SNS</h3>
-      <a target="_blank" href="https://github.com/show0317sw">GitHub</a>
-      <a target="_blank" href="https://twitter.com/show0317sw">Twitter</a>
-      <a target="_blank" href="https://www.facebook.com/show0317sw">facebook</a>
-      <a target="_blank" href="https://qiita.com/show0317sw">Qiita</a>
+      <a target="_blank" href="https://github.com/anoriqq">GitHub</a>
+      <a target="_blank" href="https://twitter.com/anoriqq">Twitter</a>
+      <a target="_blank" href="https://www.facebook.com/anoriqq">facebook</a>
+      <a target="_blank" href="https://qiita.com/anoriqq">Qiita</a>
     </div>
     <hr />
     <div>
@@ -141,6 +144,8 @@
         <li>2016-4-1 栃木県立宇都宮工業高等学校 機械科 入学</li>
         <li>2016-8 WROJapan北関東予選 ｢supernova｣ 準優勝</li>
         <li>2017-12-1 N高等学校 転入学</li>
+        <li>2019-1-10 株式会社プレイド エンジニアインターン</li>
+        <li>2019-3-31 N高等学校 卒業</li>
       </ul>
       <h3>Qualification</h3>
       <ul>
@@ -167,7 +172,7 @@
         </div>
         <a
           target="_blank"
-          href="https://github.com/show0317sw/u20-shiritori-bot-nodejs"
+          href="https://github.com/anoriqq/u20-shiritori-bot-nodejs"
           >GitHub</a
         >
         <p>
@@ -183,7 +188,7 @@
         <div>
           <img class="img" src="./img/fuwapath.png" alt="koudou_kiroku" />
         </div>
-        <a target="_blank" href="https://github.com/show0317sw/fuwapath"
+        <a target="_blank" href="https://github.com/anoriqq/fuwapath"
           >GitHub</a
         >
         <a target="_blank" href="https://fuwapath.life"
@@ -213,7 +218,7 @@
             allowfullscreen
           ></iframe>
         </div>
-        <a target="_blank" href="https://github.com/show0317sw/rayster"
+        <a target="_blank" href="https://github.com/anoriqq/rayster"
           >GitHub</a
         >
         <p>
@@ -230,10 +235,10 @@
         </div>
         <a
           target="_blank"
-          href="https://show0317sw.github.io/MediaPlayer/index.html"
-          >https://show0317sw.github.io/MediaPlayer/index.html</a
+          href="https://anoriqq.github.io/MediaPlayer/index.html"
+          >https://anoriqq.github.io/MediaPlayer/index.html</a
         >
-        <a target="_blank" href="https://github.com/show0317sw/MediaPlayer"
+        <a target="_blank" href="https://github.com/anoriqq/MediaPlayer"
           >GitHub</a
         >
         <p>
@@ -257,7 +262,7 @@
         >
         <a
           target="_blank"
-          href="https://github.com/show0317sw/first-show0317sw.com"
+          href="https://github.com/anoriqq/first-show0317sw.com"
           >GitHub</a
         >
         <p>
@@ -277,12 +282,12 @@
           </div>
         </div>
         <a
-          href="https://show0317sw.github.io/osu-SkinSetList-ja/SkinSetList-ja.html"
-          >https://show0317sw.github.io/osu-SkinSetList-ja/SkinSetList-ja.html</a
+          href="https://anoriqq.github.io/osu-SkinSetList-ja/SkinSetList-ja.html"
+          >https://anoriqq.github.io/osu-SkinSetList-ja/SkinSetList-ja.html</a
         >
         <a
           target="_blank"
-          href="https://github.com/show0317sw/osu-SkinSetList-ja"
+          href="https://github.com/anoriqq/osu-SkinSetList-ja"
           >GitHub</a
         >
         <p>
@@ -318,7 +323,7 @@
     <hr />
     <div>
       <h3>Contact</h3>
-      <a href="mailto:shota.yoshikawa0202@gmail.com"
+      <a href="mailto:shota.yoshikawa@anoriqq.com"
         ><img src="./img/email.png" alt="email"
       /></a>
     </div>
