feat: update image

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div>
       <div class="flex" style="margin:30px 10px">
         <img
-          src="./img/anoriqq3.png"
+          src="./img/anoriqq_2019-10-11.JPG"
           alt="anoriqq"
           height="70px"
           width="70px"
